// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Switch Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef(styled.div)>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor={true}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.label)>
    <ForwardRef(styled.input)
      aria-checked={true}
      aria-readonly={false}
      checked={true}
      disabled={false}
      id={true}
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <ForwardRef(styled.span)
      aria-hidden="true"
    />
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Switch Matches snapshot when boolean prop "id" is set to: "false" 1`] = `
<ForwardRef(styled.div)>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor={false}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.label)>
    <ForwardRef(styled.input)
      aria-checked={true}
      aria-readonly={true}
      checked={true}
      disabled={true}
      id={false}
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <ForwardRef(styled.span)
      aria-hidden="true"
    />
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Switch Matches snapshot when boolean prop "isOn" is set to: "false" 1`] = `
<ForwardRef(styled.div)>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor={true}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.label)>
    <ForwardRef(styled.input)
      aria-checked={false}
      aria-readonly={true}
      checked={false}
      disabled={true}
      id={true}
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <ForwardRef(styled.span)
      aria-hidden="true"
    />
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Switch Matches snapshot when passed all props 1`] = `
<ForwardRef(styled.div)>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor={true}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.label)>
    <ForwardRef(styled.input)
      aria-checked={true}
      aria-readonly={true}
      checked={true}
      disabled={true}
      id={true}
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <ForwardRef(styled.span)
      aria-hidden="true"
    />
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Switch Matches snapshot when passed only required props 1`] = `
<ForwardRef(styled.div)>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor={true}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.label)>
    <ForwardRef(styled.input)
      aria-checked={false}
      aria-readonly={false}
      checked={false}
      disabled={false}
      id={true}
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <ForwardRef(styled.span)
      aria-hidden="true"
    />
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;
